--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
 </head>
 <body>
-  <h1>Formulario de Residuos</h1>
+  <h1>Residuos Peligrosos Norte de Santander</h1>
 
   <form onsubmit="event.preventDefault(); calcularResiduo();" class="">
     <div>
